--- a/tools/mage/header.yml
+++ b/tools/mage/header.yml
@@ -1,6 +1,7 @@
 rules:
 - include: [.go,.js,.make,Makefile,.styl,.proto]
-  exclude: [.snap,.json,.goreleaser.release.yml,.goreleaser.snapshot.yml]
+  exclude: [.snap,.json,.goreleaser.release.yml,.goreleaser.snapshot.yml,
+    testdata]
   header:
     |
     Copyright © 20\d\d The Things Network Foundation, The Things Industries B\.V\.
