--- a/.goreleaser.release.yml
+++ b/.goreleaser.release.yml
@@ -210,7 +210,7 @@ dockers:
       - 'thethingsnetwork/lorawan-stack:{{ .Version }}'
       - 'ghcr.io/thethingsnetwork/lorawan-stack:{{ .Major }}.{{ .Minor }}'
       - 'ghcr.io/thethingsnetwork/lorawan-stack:{{ .Version }}'
-    skip_push: auto
+    skip_push: false
     extra_files:
       - data
       - public
