--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@storybook/addon-info": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/react": "^5.3.19",
-    "@testing-library/cypress": "^6.0.0",
+    "@testing-library/cypress": "^7.0.3",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.2.6",
@@ -38,7 +38,7 @@
     "copy-webpack-plugin": "^5.1.0",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^2.1.1",
-    "cypress": "^4.11.0",
+    "cypress": "6.5.0",
     "cypress-file-upload": "^5.0.2",
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.0.0",
@@ -129,7 +129,7 @@
     "yup": "^0.29.1"
   },
   "resolutions": {
-    "cypress": "4.11.0"
+    "cypress": "6.5.0"
   },
   "babel": {
     "extends": "./config/.babelrc"
