ci: Use "needs/triage" label instead of "new"

--- a/.github/workflows/issue-triage.yml
+++ b/.github/workflows/issue-triage.yml
@@ -8,7 +8,7 @@ jobs:
     name: Triage New Issues
     runs-on: ubuntu-latest
     steps:
-      - name: Add "new" label
+      - name: Add "needs/triage" label
         uses: actions/github-script@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -17,5 +17,5 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              labels: ['new']
+              labels: ['needs/triage']
             })
